chore(documentations):add documentions with swagger [finishes #166834552]
